--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script src="http://localhost:8097"></script>
+        <script>
+            (function () {
+                // Self-invoking function to avoid polluting the global scope
+
+                function getInitialColorMode() {
+                    try {
+                        const storedMode =
+                            window.localStorage.getItem("appThemeMode");
+                        if (storedMode === "light" || storedMode === "dark") {
+                            return storedMode;
+                        }
+                    } catch (e) {
+                        return "light"; 
+                    }
+
+                    // 2. Check for the user's system preference
+                    const mediaQuery = window.matchMedia(
+                        "(prefers-color-scheme: dark)"
+                    );
+                    if (mediaQuery.matches) {
+                        return "dark";
+                    }
+
+                    // 3. Fallback to a default (light mode)
+                    return "light";
+                }
+
+                const colorMode = getInitialColorMode();
+                document.documentElement.setAttribute("data-theme", colorMode);
+            })();
+        </script>
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
+        <meta
+            name="description"
+            content="Web site created using create-react-app"
+        />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+            rel="stylesheet"
+        />
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap"
             rel="stylesheet"
@@ -26,9 +62,15 @@
             rel="stylesheet"
         />
 
-        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sora:wght@100..800&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap"
+            rel="stylesheet"
+        />
 
-        <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet"
+        />
 
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
